[package]
name = "fastqueue"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "fastqueue"
crate-type = ["cdylib"]

[dependencies]
pyo3 = "0.23.3"
crossbeam-queue = "0.3"
shared_memory = "0.12.4"
named-lock = "0.4.1"